Update OpenAPI Swagger in the file json and Swagger UI
